Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67144

quickcontrols\dialogs\systemdialog crashes when running on UWP

    XMLWordPrintable

Details

    • WinRT
    • 654de8242411dae548795f9b17648608f8a8c28d

    Description

      quickcontrols\dialogs\systemdialog example launches, but crashes shortly after launch with:

      winrtrunner --device 0 --start --stop --install --wait 0 --profile appx C:/Users/user/qt_online/qt595entstaging/Examples/Qt-5.9.5/quickcontrols/dialogs/build-systemdialogs-Qt_5_9_5_for_UWP_64bit_MSVC_2015-Debug/debug/systemdialogs.exe
      
      qt.winrtrunner: Using the Appx profile.
      
      qt.winrtrunner: App started with process ID 15812
      
      qt.winrtrunner.app: WARNING: QApplication was not created in the main() thread.
      
      qt.winrtrunner.app: Could not enable JIT, fallback to interpreter mode. Consider setting the code-generation capability
      
      qt.winrtrunner.app: JIT is disabled for QML. Property bindings and animations will be very slow. Visit https://wiki.qt.io/V4 to learn about possible solutions for your platform.
      
      qt.winrtrunner.app: QQmlApplicationEngine failed to load component
      
      qt.winrtrunner.app: qrc:/dialogs/systemdialogs/systemdialogs.qml:70 Type ColorDialogs unavailable
      
      qrc:/dialogs/systemdialogs/ColorDialogs.qml:62 Type ColorDialog unavailable
      
      file:///C:/Users/user/qt_online/qt595entstaging/Examples/Qt-5.9.5/quickcontrols/dialogs/build-systemdialogs-Qt_5_9_5_for_UWP_64bit_MSVC_2015-Debug/debug/QtQuick/Dialogs/WidgetC
      
      olorDialog.qml:-1 No such file or directory
      
      
      

      Not regression, same with Qt 5.9.4.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              owolff Oliver Wolff
              mipohjan Milla Pohjanheimo
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes