Do not treat winrt as touch based mobile platform

While winrt used to be a touch based, mobile platform before, focus has
shifted. Widgets were supported from the start and while they are not
the main area of focus, disallowing widget dialogs is not the right
approach here.

Furthermore the current logic of whether widget dialogs should be
registered does not work on winrt. The parts containing widgets either
have to be removed completely or bound to the same specific conditions
everywhere.

The mix of setting "no_desktop" and not having widget dialogs
unconditionally for "mobile platforms", but then doing additional checks
when registering widget dialog types breaks the concept at least for
winrt.

Task-number: QTBUG-67144
Change-Id: I36fc5b6f8729bbd128faf1de95fc0bba297ab0e9
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>